snippets/chapter1/webserver-daemonsets.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: webserver-dms
  labels:
    app: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: nginx:1.20.1
        ports:
        - containerPort: 80
