snippets/chapter1/webserver-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  containers:
  - name: webserver
    image: nginx:1.20.1
    ports:
      - containerPort: 80
