snippets/chapter1/webserver-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service-lb
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: LoadBalancer
